2010-04-15  Adam Barth  <abarth@webkit.org>

        Reviewed by Jeremy Orlow.

        Add URL parsing tests for paths
        https://bugs.webkit.org/show_bug.cgi?id=37672

        * fast/url/path-expected.txt: Added.
        * fast/url/path.html: Added.
        * fast/url/script-tests/path.js: Added.

2010-04-15  Zhenyao Mo  <zmo@google.com>

        Reviewed by Dimitri Glazkov.

        Index validation code validates too many vertex attributes
        https://bugs.webkit.org/show_bug.cgi?id=31892

        * fast/canvas/webgl/index-validation-expected.txt: Add new test cases for index validations.
        * fast/canvas/webgl/script-tests/index-validation.js: Ditto.

2010-04-15  Jian Li  <jianli@chromium.org>

        Unreviewed.

        Mark send-form-data-with-sliced-file.html as failed on Chromium Linux.

        * platform/chromium/test_expectations.txt:

2010-04-15  Dmitry Titov  <dimich@chromium.org>

        Unreviewed, rolling out r57688.
        http://trac.webkit.org/changeset/57688
        https://bugs.webkit.org/show_bug.cgi?id=34992

        Makes fast/workers/dedicated-worker-lifecycle.html crashing on all GTK bots

        * fast/workers/change-version-handle-reuse-worker-expected.txt: Removed.
        * fast/workers/change-version-handle-reuse-worker.html: Removed.
        * fast/workers/execute-sql-args-worker-expected.txt: Removed.
        * fast/workers/execute-sql-args-worker.html: Removed.
        * fast/workers/resources/database-worker-controller.js: Removed.
        * fast/workers/resources/database-worker.js: Removed.
        * storage/change-version-handle-reuse-expected.txt:
        * storage/change-version-handle-reuse.html:
        * storage/change-version-handle-reuse.js: Removed.
        * storage/execute-sql-args.html:
        * storage/execute-sql-args.js: Removed.

2010-04-15  Albert J. Wong  <ajwong@chromium.org>

        Not reviewed.  Sheriffing.
