@@ -2,6 +2,17 @@
 
         Reviewed by Jeremy Orlow.
 
+        Add URL parsing tests for host names
+        https://bugs.webkit.org/show_bug.cgi?id=37666
+
+        * fast/url/host-expected.txt: Added.
+        * fast/url/host.html: Added.
+        * fast/url/script-tests/host.js: Added.
+
+2010-04-15  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Jeremy Orlow.
+
         Add URL parsing tests for paths
         https://bugs.webkit.org/show_bug.cgi?id=37672
 
